<resources>
    <string name="app_name">CalendarEsimed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <string name="loginButton">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="login">Identifiant</string>
    <string name="email">Email</string>

    <string name="addrIp">http://%s:%s</string>


    <string name="menu_month">Calendrier Moi</string>
    <string name="menu_week">Calendrier semaine</string>
    <string name="menu_day">Calendrier jour</string>
    <string name="title_nav"><![CDATA[Calendrier & tâches]]></string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title">Tâche du %s</string>
    <string name="title_of_task">titre de la tâche</string>
    <string name="choice_hour">Choix de l\'heure</string>
    <string name="progress">Progression</string>
    <string name="cancel">annuler</string>
    <string name="validate">valider</string>

    <string name="errorNewTaskTitle">Le titre doit être remplit</string>
    <string name="delete">supprimer</string>
    <string name="select_task">Sélectionner la tâche</string>
    <string name="inscription">Inscription</string>
    <string name="register">s\'enregistrer</string>

    <string name="deleteConfirm">Voulez-vous vraiment supprimer cette tâche ?</string>
    <string name="logoutConfirm">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>


    <string name="UnknownHostException">l\'adresse IP / URL \' %s \' ou le port \' %s \' n\'est pas correcte !</string>
    <string name="SocketTimeoutException">La connexion au serveur n\'a pas pu aboutir, veuillez vérifier que le serveur est bien ouvert et que les paramètres sont corrects</string>
    <string name="errorServerRedColor">La connexion au serveur n\'a pas pu aboutir, veuillez vérifier que le serveur est bien ouvert, que les paramètres sont corrects et que vous êtes à porter</string>
    <string name="the_connection_failed">La connexion a échoué</string>

    <string name="input_failed">Veuillez remplir tout les champs ci-dessus</string>

    <string name="send_token">Bearer %s</string>
    <string name="deconnect">Se déconnecter</string>

</resources>