<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation">

    <fragment
        android:id="@+id/nav_month"
        android:name="sebastien.andreu.esimed.ui.calendar.month.MonthFragment"
        android:label="@string/menu_month"
        tools:layout="@layout/fragment_month" />

    <fragment
        android:id="@+id/nav_week"
        android:name="sebastien.andreu.esimed.ui.calendar.week.WeekFragment"
        android:label="@string/menu_week"
        tools:layout="@layout/fragment_week" />

    <fragment
        android:id="@+id/nav_day"
        android:name="sebastien.andreu.esimed.ui.calendar.daily.DailyFragment"
        android:label="@string/menu_day"
        tools:layout="@layout/fragment_daily" />
</navigation>